[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "example_package_timo_scholz"
version = "0.0.1"
authors = [
  {name = "Timo Scholz", email = "tascholz@gmx.de"},
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://github.com/tascholz/testpackage"
"Bug Tracker" = "https://github.com/tascholz/testpackage/issues"
